--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react_hope_in_hearts",
-  "homepage": "MilanBFG-Dev/github.io",
+  "homepage": "https://MilanBFG-Dev/github.io/Hope-In-Hearts",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
